--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -725,7 +725,7 @@ CONFIG_ATH9K=y
 CONFIG_ATH_COMMON=y
 CONFIG_ATH9K_HW=y
 CONFIG_ATH9K_COMMON=y
-CONFIG_ATH9K_HTC=m
+CONFIG_ATH9K_HTC=y
 CONFIG_ATH9K_HTC_DEBUG=n
 CONFIG_ATH9K_HTC_DEBUGFS=n
 CONFIG_ATH9K_CHANNEL_CONTEXT=y
